# card-ocr

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/api/: middleware.py  router.py  schemas.py
src/core/: config.py  excepts.py  files.py  logger.py  memory_store.py
src/ocr/: card_detector.py  card_registry.py  image_preprocess.py  ocr_engine.py
src/tasks/: ocr_worker.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  api.ts  excelGenerator.ts  historyStorage.ts  index.css  types.ts
web/src/components/: Dialog.tsx  HistoryDetailPanel.tsx  HistoryPanel.tsx  ProgressPanel.tsx  RowResultPanel.tsx  RowUploadPanel.tsx  Toast.tsx  UploadPanel.tsx
web/src/hooks/: useHistoryState.ts
web/src/utils/: dialog.tsx  toast.tsx  verifyLocalStorageBaseline.ts
