[project]
name = "card-ocr"
version = "4.0.0"
description = "基于 PP-OCRv6 ONNX 和 SSE 实时推送的本地卡证批量识别系统（无数据库、纯内存）"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "hanzi zhu", email = "hzzhu92@gmail.com" }]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "rapidocr-onnxruntime>=1.3.0",
    "pillow>=10.2.0",
    "mrz>=0.2.2",
    "python-multipart>=0.0.9",
    "loguru>=0.7.2",
    "aiofiles>=23.2.1",
    "orjson>=3.10.0",
    "huggingface-hub>=1.22.0",
    "scikit-learn>=1.7.2",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
